Run polymer build and pack a working distro zip + fix polymer lint.

--- a/prototype/website/index.html
+++ b/prototype/website/index.html
@@ -15,26 +15,22 @@
     <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
     <link rel="import" href="bower_components/iron-flex-layout/iron-flex-layout-classes.html">
     <style is="custom-style" include="iron-flex iron-flex-alignment"></style>
-    <link rel="import" href="/src/elements/frontpage/start-page.html">
-    <link rel="import" href="/src/elements/frontpage/footer.html">
-    <link rel="import" href="/src/elements/login/game-login.html">
-    <link rel="import" href="/src/elements/realmlist/realm-list.html">
-    <link rel="import" href="/src/elements/characterlist/character-list.html">
-    <link rel="import" href="/src/elements/game/game-view.html">
-    <link rel="import" href="/src/elements/patcher/patch-download.html">
-    <link rel="import" href="/src/elements/frontpage/error-dialog.html">
+    <link rel="import" href="/src/game-app/start-page.html">
+    <link rel="import" href="/src/game-app/footer.html">
+    <link rel="import" href="/src/game-app/game-login.html">
+    <link rel="import" href="/src/game-app/realm-list.html">
+    <link rel="import" href="/src/game-app/character-list.html">
+    <link rel="import" href="/src/game-app/game-view.html">
+    <link rel="import" href="/src/game-app/patch-download.html">
+    <link rel="import" href="/src/game-app/error-dialog.html">
     <link rel="import" href="/src/style/theme.html">
     <link rel="stylesheet" href="/src/style/style.css">
     <title></title>
 </head>
 <body class="layout vertical layout-start">
-<header-toolbar id="header" class="layout vertical fit">
-</header-toolbar>
-
 
 <div id="page">
     <start-page class="layout horizontal center-justified"/>
-    <start-game class="layout horizontal center-justified"/>
 </div>
 
 <div id="game-login">
