--- a/prototype/website/src/game-app/page-news.html
+++ b/prototype/website/src/game-app/page-news.html
@@ -14,8 +14,8 @@
  -->
 
 <dom-module id="page-news">
-    <link rel="import" href="../../style/theme.css" type="css">
-    <link rel="import" href="../../style/style.css" type="css">
+    <link rel="import" href="../style/theme.css" type="css">
+    <link rel="import" href="../style/style.css" type="css">
     <template>
         <style>
             :host {
