--- a/prototype/website/src/game-app/patch-download.html
+++ b/prototype/website/src/game-app/patch-download.html
@@ -4,6 +4,7 @@
 <link rel="import" href="../../bower_components/paper-ripple/paper-ripple.html">
 <link rel="import" href="../../bower_components/paper-tooltip/paper-tooltip.html">
 <link rel="import" href="../../bower_components/paper-progress/paper-progress.html">
+<link rel="import" href="../../bower_components/paper-material/paper-material.html">
 
 
 <!--
@@ -12,8 +13,8 @@
  -->
 
 <dom-module id="patch-download">
-    <link rel="import" href="../../style/theme.css" type="css">
-    <link rel="import" href="../../style/style.css" type="css">
+    <link rel="import" href="../style/theme.css" type="css">
+    <link rel="import" href="../style/style.css" type="css">
     <template>
         <style>
             :host {
