--- a/prototype/website/src/game-app/start-page.html
+++ b/prototype/website/src/game-app/start-page.html
@@ -19,8 +19,8 @@
 
 
 <dom-module id="start-page">
-    <link rel="import" href="../../style/theme.css" type="css">
-    <link rel="import" href="../../style/style.css" type="css">
+    <link rel="import" href="../style/theme.css" type="css">
+    <link rel="import" href="../style/style.css" type="css">
     <template>
         <style>
             :host {
