--- a/prototype/website/src/game-app/error-dialog.html
+++ b/prototype/website/src/game-app/error-dialog.html
@@ -3,6 +3,7 @@
 <link rel="import" href="../../bower_components/paper-button/paper-button.html">
 <link rel="import" href="../../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="../../bower_components/paper-tooltip/paper-tooltip.html">
+<link rel="import" href="../../bower_components/paper-dialog-scrollable/paper-dialog-scrollable.html">
 <link rel="import" href="../../bower_components/neon-animation/animations/scale-up-animation.html">
 <link rel="import" href="../../bower_components/neon-animation/animations/fade-out-animation.html">
 
@@ -12,8 +13,8 @@
  -->
 
 <dom-module id="error-dialog">
-    <link rel="import" href="../../style/theme.css" type="css">
-    <link rel="import" href="../../style/style.css" type="css">
+    <link rel="import" href="../style/theme.css" type="css">
+    <link rel="import" href="../style/style.css" type="css">
     <template>
         <style>
             :host {
