cleanup of realmsettings and js / reusable loading spinner.

--- a/prototype/website/index.html
+++ b/prototype/website/index.html
@@ -2,19 +2,16 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Chili-core engine live demo!</title>
+    <title>chili-game-ext</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
-    <script src="src/script/service/authentication.js"></script>
     <script src="src/script/network.js"></script>
     <script src="src/script/connection.js"></script>
     <script src="src/script/application.js"></script>
     <script src="src/script/service/patcher.js"></script>
-    <script src="src/script/service/patchserver.js"></script>
     <script src="src/script/service/realmregistry.js"></script>
     <script src="src/script/service/realmserver.js"></script>
+    <script src="src/script/service/authentication.js"></script>
     <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
-    <link rel="import" href="bower_components/iron-flex-layout/iron-flex-layout-classes.html">
-    <style is="custom-style" include="iron-flex iron-flex-alignment"></style>
     <link rel="import" href="src/game-app/app-view.html">
     <link rel="stylesheet" href="src/style/style.css">
     <title></title>
