--- a/prototype/website/src/game-app/game-view.html
+++ b/prototype/website/src/game-app/game-view.html
@@ -32,13 +32,7 @@
                 width: 100%;
                 height: 100%;
             }
-
-
-
-
         </style>
-
-
         <div id="interface">
             <paper-button class="primary" on-tap="characters" raised>CHARACTERS</paper-button>
 
@@ -61,6 +55,8 @@
 
             constructor() {
                 super();
+
+                // todo: should call join on the server before loading game.js
 
                 application.onCompleteUpdate((event) => {
                     // store in global so that game.js can access them.
@@ -89,13 +85,11 @@
                             }
                        }
                        loader(index);
-
                     } catch (err) {
                         console.log(err.message);
                         application.error(err.message);
                         throw err;
                     }
-
                     window.canvas = this.$.game;
                     window.context = event;
                 });
@@ -107,9 +101,5 @@
             }
         }
         window.customElements.define(GameView.is, GameView);
-
-
-
-
     </script>
 </dom-module>
