--- a/prototype/website/src/game-app/start-page.html
+++ b/prototype/website/src/game-app/start-page.html
@@ -31,42 +31,39 @@
                 max-width: 825px;
                 margin: auto;
                 margin-top: 128px;
+                display: block;
             }
+
         </style>
 
-            <div class="container center-box">
+        <paper-material class="container center-box" elevation="3">
 
-                <paper-material elevation="3">
+            <paper-tabs selected="{{page}}" no-slide>
+                <paper-tab>News</paper-tab>
+                <paper-tab>Realm info</paper-tab>
+                <paper-tab>Patch notes</paper-tab>
+            </paper-tabs>
 
-                    <paper-tabs selected="{{page}}" no-slide>
-                        <paper-tab>News</paper-tab>
-                        <paper-tab>Realm info</paper-tab>
-                        <paper-tab>Patch notes</paper-tab>
-                    </paper-tabs>
+            <iron-pages selected="{{page}}" class="page-content">
+                <div>
+                    <paper-material elevation="0">
+                        <page-news></page-news>
+                    </paper-material>
+                </div>
+                <div>
+                    <paper-material elevation="0">
+                        <page-gameinfo></page-gameinfo>
+                    </paper-material>
+                </div>
+                <div>
+                    <paper-material elevation="0">
+                        <page-patchnotes></page-patchnotes>
+                    </paper-material>
+                </div>
+            </iron-pages>
 
-                    <iron-pages selected="{{page}}" class="page-content">
-                        <div>
-                            <paper-material elevation="0">
-                                <page-news></page-news>
-                            </paper-material>
-                        </div>
-                        <div>
-                            <paper-material elevation="0">
-                                <page-gameinfo></page-gameinfo>
-                            </paper-material>
-                        </div>
-                        <div>
-                            <paper-material elevation="0">
-                                <page-patchnotes></page-patchnotes>
-                            </paper-material>
-                        </div>
-                    </iron-pages>
-
-                    <paper-button raised class="primary flex" on-tap="start">ENTER GAME</paper-button>
-                </paper-material>
-
-        </div>
-
+            <paper-button raised class="primary flex" on-tap="start">ENTER GAME</paper-button>
+        </paper-material>
     </template>
     <script>
         class StartPage extends Polymer.Element {
@@ -85,5 +82,6 @@
             }
         }
         window.customElements.define(StartPage.is, StartPage);
+
     </script>
 </dom-module>
